[metadata]
name = oclock
author = Olivier Vincent
author_email = olivier.vincent@ens-paris-saclay.fr
url = https://github.com/ovinc/oclock
description = Timing tools (cancellable timers, constant-duration loops, countdowns, context managers, etc.)
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = timing, cancellable, countdown, context manager
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires =
    >=3.6
