[metadata]
name = oclock
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/oclock
description =  Tools for timed, no-drift loops of constant duration, and other misc. timing tools (GUI countdown, context managers etc.)
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = timing, loops, constant duration, cancellable, modifiable, countdown, context manager, gui
license_files = LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires =
    >=3
