[metadata]
name = oclock
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/oclock
description =  Tools for timed, no-drift loops of constant duration, and other misc. timing tools (GUI countdown, context managers etc.)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = timing, loops, constant duration, cancellable, modifiable, countdown, context manager, gui
license_files = LICENSE
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    importlib-metadata
setup_requires =
    setuptools_scm
python_requires =
    >=3.5
